# allTestAS

testall/app/: CMakeLists.txt  build.gradle
testall/app/libs/: HSGameSDK-release.aar
testall/app/src/main/: AndroidManifest.xml
testall/app/src/main/jni/: com_oddshou_testall_jniClass_JniUtils.h  jnitest.c
testall/app/src/main/res/drawable/: btn_bg_dashgap.xml  btn_first_framework_selector.xml  button_selector.xml  shape_framework_theme.xml  transition.xml
testall/app/src/main/res/layout/: activity_container.xml  activity_drag_gridview.xml  activity_dragback_container.xml  activity_drawable_main.xml  activity_drawable_test.xml  activity_drawer_layout.xml  activity_gridlayout_animation.xml  activity_jni.xml  activity_launchmode.xml  activity_main.xml  activity_main2.xml  activity_manager.xml  activity_netwrok_log.xml  activity_screen.xml  activity_tab_itercept.xml  activity_view_test.xml  activity_wave_view.xml  fragment_menu.xml  (+3 more)
testall/app/src/main/res/layout-sw120dp/: activity_screen.xml
testall/app/src/main/res/layout-sw160dp/: activity_screen.xml
testall/app/src/main/res/layout-sw240dp/: activity_screen.xml
testall/app/src/main/res/layout-sw320dp/: activity_screen.xml
testall/app/src/main/res/layout-sw360dp/: activity_screen.xml
testall/app/src/main/res/layout-sw400dp/: activity_screen.xml
testall/app/src/main/res/layout-sw440dp/: activity_screen.xml
testall/app/src/main/res/layout-sw480dp/: activity_screen.xml
testall/app/src/main/res/layout-sw600dp/: activity_screen.xml
testall/app/src/main/res/layout-sw720dp/: activity_screen.xml
(+558 files in other folders)
